compiler/tools/fpp-to-dict/test/top/missingFwFixedLengthStringSizeConstant.ref.txt
fpp-to-dict
[ local path prefix ]/tools/fpp-to-dict/test/top/missingFwFixedLengthStringSizeConstant.fpp:27.1
topology T {
^
error: symbol FW_FIXED_LENGTH_STRING_SIZE is not defined
note: looking for a constant here
note: the symbol FW_FIXED_LENGTH_STRING_SIZE has an implied use at the point of the error
note: this implied use occurs when constructing a dictionary
